overflow-x fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,16 +50,21 @@ html {
 	font-size: 1.2rem;
 	font-family: 'Roboto Condensed', sans-serif;
 	line-height: 1.5;
+	width: 100vw;
+	height: 100vh;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 @media screen and (max-width: 550px) {
 	html {
+		width: 100vw;
 		overflow-x: hidden;
 	}
 
 	body::-webkit-scrollbar {
-		display: none;
+		width: 0px;
+		background: transparent;
 	}
 
 	/* Hide scrollbar for IE, Edge and Firefox */
@@ -84,6 +89,7 @@ html {
 section {
 	display: grid;
 	min-height: 100vh;
+	max-width: 100vw;
 	padding-top: 2em;
 	padding-bottom: 2em;
 	justify-content: center;
@@ -146,6 +152,12 @@ nav a {
 	text-decoration: none;
 }
 
+@media screen and (min-width: 550px) {
+	#open-nav-btn,
+	#close-nav-btn {
+		display: none;
+	}
+}
 @media screen and (max-width: 550px) {
 	nav {
 		top: 0;
@@ -177,9 +189,9 @@ nav a {
 	#open-nav-btn {
 		color: var(--main-blue);
 		position: fixed;
-		top: 0;
-		right: 0;
-		padding: 0.2em;
+		top: 0.4em;
+		right: 0.4em;
+		/* padding: 0.2em; */
 	}
 
 	#close-nav-btn {
@@ -295,6 +307,7 @@ nav a {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	width: 100vw;
 }
 
 .project {
@@ -355,6 +368,12 @@ nav a {
 
 .project-links a:hover {
 	color: #0064b5;
+}
+
+@media screen and(max-width: 550px) {
+	.project {
+		margin: 0;
+	}
 }
 
 /* Contact */
@@ -440,6 +459,10 @@ textarea {
 	margin: 1rem auto;
 	height: 2rem;
 	width: 60%;
+}
+
+.submit-btn:focus {
+	outline: none;
 }
 
 /* Footer */
